- PDF Viewer and Video Viewer

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -14,11 +14,6 @@
     <link href="THEME/plugins/animate-css/animate.css" rel="stylesheet" />
     <link href="THEME/css/style.css" rel="stylesheet">
     <link href="THEME/css/themes/all-themes.css" rel="stylesheet" />
-    <style>
-        .sidebar .menu .list .zeroMenu::before {
-            content: '0' !important;
-        }
-    </style>
 </head>
 
 <body class="theme-light-blue">
@@ -74,77 +69,7 @@
             </div>
         </div>
     </nav>
-    <section>
-        <aside id="leftsidebar" class="sidebar">
-            <div class="menu">
-                <ul class="list">
-                    <li class="header">
-                        <i class="material-icons">book</i>
-                        <big>
-                            <big>
-                                <big>
-                                    <big>
-                                        <big>
-                                            <b>Library</b>
-                                        </big>
-                                    </big>
-                                </big>
-                            </big>
-                        </big>
-                        <i class="material-icons pull-right">refresh</i>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-toggle waves-effect waves-block zeroMenu">
-                            <span>All</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-toggle waves-effect waves-block zeroMenu">
-                            <span>Downloaded</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-toggle waves-effect waves-block zeroMenu">
-                            <span>PDFs</span>
-                        </a>
-                    </li>
-                    <li class="header">
-                        <i class="material-icons">list</i>
-                        <big>
-                            <big>
-                                <big>
-                                    <big>
-                                        <big>
-                                            <b>Collections</b>
-                                        </big>
-                                    </big>
-                                </big>
-                            </big>
-                        </big>
-                        <i class="material-icons pull-right">swap_vert</i>
-                        <i class="material-icons pull-right">add</i>
-                    </li>
-                    <li>
-                        <div class="input-group" style="padding: 5%;">
-                            <span class="input-group-addon">
-                                <i class="material-icons">search</i>
-                            </span>
-                            <div class="form-line">
-                                <input type="text" class="form-control" placeholder="Search Collection Name" />
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="legal">
-                <div class="copyright">
-                    &copy; 2019
-                    <a href="#">Bygoz e-Learning Private Limited</a>.
-                </div>
-            </div>
-        </aside>
-    </section>
-    <section class="content">
+    <section class="content" style="margin: 110px 0px 0 0px">
         <div class="container-fluid">
 
             <div class="row clearfix">
