--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -48,10 +48,18 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="#" id="aLogo">BYGOZ E-LEARNING PRIVATE LIMITED</a>
+                <a href="#" id="aLogo"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
+                    </li>
+                    <li>
+                        <a href="#" id="aLogo" data-close="true">
+                            <i class="material-icons">home</i>
+                        </a>
+                    </li>
                     <li>
                         <a href="javascript:void(0);" class="js-search" data-close="true">
                             <i class="material-icons">search</i>
@@ -62,7 +70,7 @@
                     <li>
                         <a href="#" id="mLogin">
                             <i class="material-icons">shopping_cart</i>
-                            <span>BM Store</span>
+                            <span>Bygoz Store</span>
                         </a>
                     </li>
                 </ul>
